<resources>
    <string name="app_name">frontend</string>
    <string name="welcome_to">Welcome to</string>
    <string name="enter_username">Enter your first name and, if you wish, digits:</string>
    <string name="Username">Username</string>
    <string name="check_username">Check username</string>
    <string name="contentDescriptionLogoBig">The picture shows the text "the Game of" and the word LIFE in colorful letters.</string>
    <string name="createGame">CREATE GAME</string>
    <string name="joinGame">JOIN GAME</string>
    <string name="enterYourLobbyCode">ENTER YOUR LOBBY CODE</string>
    <string name="line">----</string>
    <string name="go">GO!</string>
...
